@@ -1,1 +1,3 @@
 usr/share/libswe
+usr/share/libswe/users
+usr/share/libswe/users/ephe
