@@ -27,5 +27,6 @@ libswe (1.77.00.0001-1) unstable; urgency=low
   * remove upstream ChangeLog
   * add swetest.1 swemini.1 manpages
   * move man pages to swissephauto project
+  * move data files to $(pkgdatadir)/users/ephe/
 
  -- Paul Elliott <pelliott@blackpatchpanel.com>  Mon, 08 Aug 2011 22:48:57 -0500
